# GridBot

./: .gitignore  ACTIVITY.md  FORK_NOTES.md  MAINTENANCE_2026-06-10.md  README.md  config.example.env  pyproject.toml
.github/workflows/: backtest.yml
data/: sample_prices.csv
docs/: backtest-plan.md  strategy-template.md
examples/: simple_backtest.py
src/: dip_hunter_bot.py
src/afree_gridbot/: __init__.py  backtest.py  grid.py
src/educational_gridbot/: __init__.py
tests/: test_grid.py
